test/files/neg/t4419.check
t4419.scala:2: error: forward reference to value a defined on line 2 extends over definition of value b
  { val b = a; val a = 1 ; println(a) }
            ^
1 error
